# ProtoCloud

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.yml
results/PBMC_10K/: protoCloud_lr1e-03_e100_b128_PBMC_10K_idx.csv  protoCloud_lr1e-03_e100_b128_PBMC_10K_latent.npy  protoCloud_lr1e-03_e100_b128_PBMC_10K_metrics.npy  protoCloud_lr1e-03_e100_b128_PBMC_10K_pred.csv  protoCloud_lr1e-03_e100_b128_PBMC_10K_prototypes.npy  protoCloud_lr1e-03_e100_b128_PBMC_10K_trend.npy
results/PBMC_10K/lrp/: B cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  B cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_relgenes.npy  CD14+ Monocytes_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  CD14+ Monocytes_protoCloud_lr1e-03_e100_b128_PBMC_10K_relgenes.npy  CD4 T cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  CD4 T cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_relgenes.npy  CD8 T cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  CD8 T cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_relgenes.npy  Dendritic Cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  Dendritic Cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_lrp.npy  Dendritic Cells_protoCloud_lr1e-03_e100_b128_PBMC_10K_relgenes.npy  FCGR3A+ Monocytes_protoCloud_lr1e-03_e100_b128_PBMC_10K_latents.npy  (+10 more)
saved_models/PBMC_10K/: model_dict.pkl  protoCloud_lr1e-03_e100_b128_PBMC_10K.pth
src/: glo.py  lrp.py  lrp_general.py  model.py  plot.py  scRNAdata.py  train.py  utils.py
src/ProtoCloud/: __init__.py  glo.py  main.py
src/ProtoCloud/data/: __init__.py  (+2 more)
src/data/: load_data.py  scRNAdata.py
(+27 files in other folders)
