[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProtoCloud"             # pip install ProtoCloud
version = "1.0.0"
description = ""
authors = [
    {name = "Kaiyun Guo"},
    {name = "Jiarui Ding"},
    ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "scanpy>=1.10.2",
    "anndata>=0.10.8",
    "scikit-learn>=1.5.1",
    "torch>=1.12.1",
    "torchvision>=0.13.1",
    "matplotlib>=3.9.1",
    "matplotlib-venn>=1.0.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "ProtoCloud",
  "ProtoCloud.data",
  "ProtoCloud.model",
  "ProtoCloud.utils",
  "ProtoCloud.viz",
  "ProtoCloud.prp",
]     